# file-templater

./: README.md  autogen.sh  configure.ac  file-templater.pc.in
dependencies/: boost.pc.in  install-deps.sh  jsoncpp-0.9.4.tar.xz
example/: basketbit.conf
example/basketbit-skeleton/: footer.txt  header1.txt  header2.txt  index.body  index.pre  main.body
src/main/: FileTemplater.cpp  FileTemplater.hpp  Makefile.am  fileTemplater.cpp  fileTemplaterMain.cpp
